--- a/index.html
+++ b/index.html
@@ -9,27 +9,27 @@
   </head>
   <body>
     <div class="movie-container">
-      <label>Pick a movie:</label>
+      <label>Kies een film:</label>
       <select id="movie">
-        <option value="10">Avengers: Endgame ($10)</option>
-        <option value="12">Joker ($12)</option>
-        <option value="8">Toy Story 4 ($8)</option>
-        <option value="9">The Lion King ($9)</option>
+        <option value="10">Wonder Woman 1984 (€10)</option>
+        <option value="12">Tenet (€12)</option>
+        <option value="8">Peter Rabbit 2 (€8)</option>
+        <option value="9">No Time To Die (€11)</option>
       </select>
     </div>
 
     <ul class="showcase">
       <li>
         <div class="seat"></div>
-        <small>N/A</small>
+        <small>Beschikbaar</small>
       </li>
       <li>
         <div class="seat selected"></div>
-        <small>Selected</small>
+        <small>Geselecteerd</small>
       </li>
       <li>
         <div class="seat occupied"></div>
-        <small>Occupied</small>
+        <small>Bezet</small>
       </li>
     </ul>
 
@@ -99,7 +99,7 @@
     </div>
 
     <p class="text">
-      You have selected <span id="count">0</span> seats for a price of $<span
+      Jij hebt <span id="count">0</span> stoelen geselecteerd voor een prijs van €<span
         id="total"
         >0</span
       >
